@@ -12,70 +12,83 @@
 package me.glindholm.connector.eclipse.internal.jira.core.service.rest;
 
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.time.Instant;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 
 import org.apache.commons.lang.StringUtils;
-import org.codehaus.jettison.json.JSONArray;
 import org.codehaus.jettison.json.JSONException;
 import org.codehaus.jettison.json.JSONObject;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.mylyn.commons.core.StatusHandler;
 import org.eclipse.osgi.util.NLS;
-import org.joda.time.DateTime;
-import org.joda.time.format.DateTimeFormat;
-
-import com.atlassian.jira.rest.client.IssueRestClient;
-import com.atlassian.jira.rest.client.domain.BasicComponent;
-import com.atlassian.jira.rest.client.domain.BasicIssue;
-import com.atlassian.jira.rest.client.domain.BasicIssueType;
-import com.atlassian.jira.rest.client.domain.BasicProject;
-import com.atlassian.jira.rest.client.domain.BasicUser;
-import com.atlassian.jira.rest.client.domain.FavouriteFilter;
-import com.atlassian.jira.rest.client.domain.Field;
-import com.atlassian.jira.rest.client.domain.Issue;
-import com.atlassian.jira.rest.client.domain.Status;
-import com.atlassian.jira.rest.client.domain.Transition;
-import com.atlassian.jira.rest.client.domain.Visibility;
-import com.atlassian.jira.rest.client.domain.Worklog;
-import com.atlassian.jira.rest.client.domain.input.ComplexIssueInputFieldValue;
-import com.atlassian.jira.rest.client.domain.input.FieldInput;
-import com.atlassian.jira.rest.client.domain.input.WorklogInput;
-import com.atlassian.jira.rest.client.domain.input.WorklogInputBuilder;
-import com.atlassian.jira.rest.client.internal.json.JsonParseUtil;
-import com.google.common.base.Optional;
-import com.google.common.collect.ImmutableList;
 
 import me.glindholm.connector.eclipse.internal.jira.core.JiraAttribute;
 import me.glindholm.connector.eclipse.internal.jira.core.JiraCorePlugin;
 import me.glindholm.connector.eclipse.internal.jira.core.JiraFieldType;
-import me.glindholm.connector.eclipse.internal.jira.core.model.AllowedValue;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Attachment;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Comment;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Component;
-import me.glindholm.connector.eclipse.internal.jira.core.model.CustomField;
-import me.glindholm.connector.eclipse.internal.jira.core.model.IssueField;
-import me.glindholm.connector.eclipse.internal.jira.core.model.IssueLink;
-import me.glindholm.connector.eclipse.internal.jira.core.model.IssueType;
 import me.glindholm.connector.eclipse.internal.jira.core.model.JiraAction;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraAllowedValue;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraAttachment;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraComment;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraComponent;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraCustomField;
 import me.glindholm.connector.eclipse.internal.jira.core.model.JiraIssue;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraIssueField;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraIssueLink;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraIssueType;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraNamedFilter;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraPriority;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraProject;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraResolution;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraSecurityLevel;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraServerInfo;
 import me.glindholm.connector.eclipse.internal.jira.core.model.JiraStatus;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraSubtask;
+import me.glindholm.connector.eclipse.internal.jira.core.model.JiraVersion;
 import me.glindholm.connector.eclipse.internal.jira.core.model.JiraWorkLog;
-import me.glindholm.connector.eclipse.internal.jira.core.model.NamedFilter;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Priority;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Project;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Resolution;
-import me.glindholm.connector.eclipse.internal.jira.core.model.SecurityLevel;
-import me.glindholm.connector.eclipse.internal.jira.core.model.ServerInfo;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Subtask;
-import me.glindholm.connector.eclipse.internal.jira.core.model.Version;
 import me.glindholm.connector.eclipse.internal.jira.core.service.JiraClientCache;
 import me.glindholm.connector.eclipse.internal.jira.core.service.JiraException;
+import me.glindholm.jira.rest.client.api.domain.Attachment;
+import me.glindholm.jira.rest.client.api.domain.BasicComponent;
+import me.glindholm.jira.rest.client.api.domain.BasicIssue;
+import me.glindholm.jira.rest.client.api.domain.BasicPriority;
+import me.glindholm.jira.rest.client.api.domain.BasicProject;
+import me.glindholm.jira.rest.client.api.domain.BasicUser;
+import me.glindholm.jira.rest.client.api.domain.BasicWatchers;
+import me.glindholm.jira.rest.client.api.domain.CimFieldInfo;
+import me.glindholm.jira.rest.client.api.domain.Comment;
+import me.glindholm.jira.rest.client.api.domain.CustomFieldOption;
+import me.glindholm.jira.rest.client.api.domain.Filter;
+import me.glindholm.jira.rest.client.api.domain.Issue;
+import me.glindholm.jira.rest.client.api.domain.IssueField;
+import me.glindholm.jira.rest.client.api.domain.IssueLink;
+import me.glindholm.jira.rest.client.api.domain.IssueType;
+import me.glindholm.jira.rest.client.api.domain.Priority;
+import me.glindholm.jira.rest.client.api.domain.Resolution;
+import me.glindholm.jira.rest.client.api.domain.ServerInfo;
+import me.glindholm.jira.rest.client.api.domain.Status;
+import me.glindholm.jira.rest.client.api.domain.Subtask;
+import me.glindholm.jira.rest.client.api.domain.Transition;
+import me.glindholm.jira.rest.client.api.domain.Version;
+import me.glindholm.jira.rest.client.api.domain.Visibility;
+import me.glindholm.jira.rest.client.api.domain.Watchers;
+import me.glindholm.jira.rest.client.api.domain.Worklog;
+import me.glindholm.jira.rest.client.api.domain.input.ComplexIssueInputFieldValue;
+import me.glindholm.jira.rest.client.api.domain.input.FieldInput;
+import me.glindholm.jira.rest.client.api.domain.input.WorklogInput;
+import me.glindholm.jira.rest.client.api.domain.input.WorklogInputBuilder;
 
 /**
  * @author Jacek Jaroczynski
@@ -86,16 +99,16 @@ public class JiraRestConverter {
         throw new Exception("Utility class"); //$NON-NLS-1$
     }
 
-    public static Project[] convertProjects(Iterable<BasicProject> allProjects) {
-        List<Project> projects = new ArrayList<Project>();
+    public static JiraProject[] convertProjects(Iterable<BasicProject> allProjects) {
+        List<JiraProject> projects = new ArrayList<>();
         for (BasicProject basicProject : allProjects) {
             projects.add(convert(basicProject));
         }
-        return projects.toArray(new Project[projects.size()]);
+        return projects.toArray(new JiraProject[projects.size()]);
     }
 
-    private static Project convert(BasicProject basicProject) {
-        Project project = new Project();
+    private static JiraProject convert(BasicProject basicProject) {
+        JiraProject project = new JiraProject();
 
         project.setName(basicProject.getName());
         project.setKey(basicProject.getKey());
@@ -104,33 +117,32 @@ public class JiraRestConverter {
         return project;
     }
 
-    public static Resolution[] convertResolutions(
-            Iterable<com.atlassian.jira.rest.client.domain.Resolution> allResolutions) {
-        List<Resolution> resolutions = new ArrayList<Resolution>();
+    public static JiraResolution[] convertResolutions(Iterable<Resolution> allResolutions) {
+        List<JiraResolution> resolutions = new ArrayList<>();
 
-        for (com.atlassian.jira.rest.client.domain.Resolution resolution : allResolutions) {
+        for (Resolution resolution : allResolutions) {
             resolutions.add(convert(resolution));
         }
 
-        return resolutions.toArray(new Resolution[resolutions.size()]);
+        return resolutions.toArray(new JiraResolution[resolutions.size()]);
     }
 
-    private static Resolution convert(com.atlassian.jira.rest.client.domain.Resolution resolution) {
-        return new Resolution(resolution.getId().toString(), resolution.getName(), resolution.getDescription(), null);
+    private static JiraResolution convert(Resolution resolution) {
+        return new JiraResolution(resolution.getId().toString(), resolution.getName(), resolution.getDescription(), null);
     }
 
-    public static Priority[] convertPriorities(Iterable<com.atlassian.jira.rest.client.domain.Priority> allPriorities) {
-        List<Priority> priorities = new ArrayList<Priority>();
+    public static JiraPriority[] convertPriorities(Iterable<Priority> allPriorities) {
+        List<JiraPriority> priorities = new ArrayList<>();
 
-        for (com.atlassian.jira.rest.client.domain.Priority priority : allPriorities) {
+        for (Priority priority : allPriorities) {
             priorities.add(convert(priority));
         }
 
-        return priorities.toArray(new Priority[priorities.size()]);
+        return priorities.toArray(new JiraPriority[priorities.size()]);
     }
 
-    private static Priority convert(com.atlassian.jira.rest.client.domain.Priority priority) {
-        Priority outPriority = new Priority(priority.getId().toString());
+    private static JiraPriority convert(Priority priority) {
+        JiraPriority outPriority = new JiraPriority(priority.getId().toString());
 
         outPriority.setName(priority.getName());
         outPriority.setDescription(priority.getDescription());
@@ -141,24 +153,22 @@ public class JiraRestConverter {
         return outPriority;
     }
 
-    public static JiraIssue convertIssue(Issue rawIssue, JiraClientCache cache, String url, IProgressMonitor monitor)
-            throws JiraException {
+    public static JiraIssue convertIssue(Issue rawIssue, JiraClientCache cache, String url, IProgressMonitor monitor) throws JiraException {
         JiraIssue issue = new JiraIssue();
 
         issue.setRawIssue(rawIssue);
+        issue.setCustomFields(getCustomFieldsFromIssue(rawIssue, cache));
+        issue.setEditableFields(getEditableFieldsFromIssue(rawIssue, cache));
 
-        issue.setCustomFields(getCustomFieldsFromIssue(rawIssue));
-        issue.setEditableFields(getEditableFieldsFromIssue(rawIssue));
+        // setAllowValuesForCustomFields(jiraIssue.getCustomFields(),
+        // jiraIssue.getEditableFields());
 
-//		setAllowValuesForCustomFields(jiraIssue.getCustomFields(), jiraIssue.getEditableFields());
-
-        Project project = cache.getProjectByKey(rawIssue.getProject().getKey());
+        JiraProject project = cache.getProjectByKey(rawIssue.getProject().getKey());
         issue.setProject(project);
         if (project != null && !project.hasDetails()) {
             cache.refreshProjectDetails(project, monitor);
         } else if (project == null) {
-            throw new JiraException(NLS.bind(
-                    "Project with key {0} not found in local cache. Please refresh repository configuration.", //$NON-NLS-1$
+            throw new JiraException(NLS.bind("Project with key {0} not found in local cache. Please refresh repository configuration.", //$NON-NLS-1$
                     rawIssue.getProject().getKey()));
         }
 
@@ -169,11 +179,14 @@ public class JiraRestConverter {
         issue.setDescription(rawIssue.getDescription());
 
         if (rawIssue.getIssueType().isSubtask()) {
-            Object parent = rawIssue.getField(JiraRestFields.PARENT).getValue();
-            if (parent instanceof JSONObject) {
-                issue.setParentKey(JsonParseUtil.getOptionalString((JSONObject) parent, JiraRestFields.KEY));
-                issue.setParentId(JsonParseUtil.getOptionalString((JSONObject) parent, JiraRestFields.ID));
-            }
+            // TODO do we care?
+            // Object parent = rawIssue.getField(JiraRestFields.PARENT).getValue();
+            // if (parent instanceof JSONObject) {
+            // issue.setParentKey(JsonParseUtil.getOptionalString((JSONObject) parent,
+            // JiraRestFields.KEY));
+            // issue.setParentId(JsonParseUtil.getOptionalString((JSONObject) parent,
+            // JiraRestFields.ID));
+            // }
 
         }
 
@@ -183,8 +196,8 @@ public class JiraRestConverter {
             issue.setPriority(cache.getPriorities()[0]);
         } else {
             issue.setPriority(null);
-            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN, NLS.bind(
-                    "Found issue with empty priority: {0}", rawIssue.getKey())));
+            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
+                    NLS.bind("Found issue with empty priority: {0}", rawIssue.getKey())));
         }
 
         issue.setStatus(cache.getStatusById(rawIssue.getStatus().getId().toString()));
@@ -200,9 +213,7 @@ public class JiraRestConverter {
             issue.setReporterName(rawIssue.getReporter().getDisplayName());
         }
 
-        issue.setResolution(rawIssue.getResolution() == null ? null : cache.getResolutionById(rawIssue.getResolution()
-                .getId()
-                .toString()));
+        issue.setResolution(rawIssue.getResolution() == null ? null : cache.getResolutionById(rawIssue.getResolution().getId().toString()));
 
         if (rawIssue.getTimeTracking() != null) {
             if (rawIssue.getTimeTracking().getOriginalEstimateMinutes() != null) {
@@ -216,7 +227,8 @@ public class JiraRestConverter {
             }
         }
 
-        Field security = rawIssue.getField(JiraRestFields.SECURITY);
+        // TODO Find some way to check this
+        IssueField security = rawIssue.getField(JiraRestFields.SECURITY);
         if (security != null && security.getValue() != null && security.getValue() instanceof JSONObject) {
             JSONObject json = (JSONObject) security.getValue();
 
@@ -224,7 +236,7 @@ public class JiraRestConverter {
                 String id = json.getString(JiraRestFields.ID);
                 String name = json.getString(JiraRestFields.NAME);
 
-                SecurityLevel securityLevel = new SecurityLevel(id, name);
+                JiraSecurityLevel securityLevel = new JiraSecurityLevel(id, name);
 
                 issue.setSecurityLevel(securityLevel);
             } catch (JSONException e) {
@@ -232,8 +244,8 @@ public class JiraRestConverter {
             }
         }
 
-        issue.setCreated(rawIssue.getCreationDate().toDate());
-        issue.setUpdated(rawIssue.getUpdateDate().toDate());
+        issue.setCreated(rawIssue.getCreationDate().toInstant());
+        issue.setUpdated(rawIssue.getUpdateDate().toInstant());
 
         if (project != null && project.getIssueTypeById(rawIssue.getIssueType().getId().toString()) != null) {
             issue.setType(project.getIssueTypeById(rawIssue.getIssueType().getId().toString()));
@@ -252,11 +264,12 @@ public class JiraRestConverter {
             issue.setComponents(convertComponents(rawIssue.getComponents()));
         }
 
-        Field env = rawIssue.getField(JiraRestFields.ENVIRONMENT);
+        IssueField env = rawIssue.getField(JiraRestFields.ENVIRONMENT);
         if (env != null && env.getValue() != null) {
             issue.setEnvironment(env.getValue().toString());
         } else {
-            // hack: empty value is necessary to display environment field in the issue editor
+            // hack: empty value is necessary to display environment field in the issue
+            // editor
             issue.setEnvironment(""); //$NON-NLS-1$
         }
 
@@ -267,14 +280,14 @@ public class JiraRestConverter {
             issue.setFixVersions(convertVersions(rawIssue.getFixVersions()));
         }
 
-        if (isVersionMissingInProjectCache(rawIssue.getAffectedVersions(), rawIssue.getFixVersions(),
-                cache.getProjectByKey(rawIssue.getProject().getKey()), monitor)) {
+        if (isVersionMissingInProjectCache(rawIssue.getAffectedVersions(), rawIssue.getFixVersions(), cache.getProjectByKey(rawIssue.getProject().getKey()),
+                monitor)) {
             cache.refreshProjectDetails(issue.getProject(), monitor);
         }
 
-        DateTime dueDate = rawIssue.getDueDate();
+        OffsetDateTime dueDate = rawIssue.getDueDate();
         if (dueDate != null) {
-            issue.setDue(dueDate.toDate());
+            issue.setDue(dueDate.toInstant());
         } else {
             issue.setDue(null);
         }
@@ -295,35 +308,43 @@ public class JiraRestConverter {
             issue.setWorklogs(convertWorklogs(rawIssue.getWorklogs()));
         }
 
-        issue.setRank(getRankFromIssue(rawIssue));
+        issue.setRank(getRankFromIssue(rawIssue, cache));
 
         if (rawIssue.getLabels() != null) {
             issue.setLabels(rawIssue.getLabels().toArray(new String[rawIssue.getLabels().size()]));
         }
 
+        issue.setVotes(rawIssue.getVotes().getVotes());
+
+        BasicWatchers watched = rawIssue.getWatched();
+        issue.setWatched(watched.isWatching());
+
+        Watchers watchers = rawIssue.getWatchers();
+        issue.setWatchers(watchers);
+
         return issue;
     }
 
-//	private static void setAllowValuesForCustomFields(CustomField[] customFields, IssueField[] editableFields) {
-//		Map<String, IssueField> editableFieldsMap = new HashMap<String, IssueField>(editableFields.length + 1, 1);
-//
-//		// transform editable fields into HasMap
-//		for (IssueField editableField : editableFields) {
-//			editableFieldsMap.put(editableField.getId(), editableField);
-//		}
-//
-//		for (CustomField customField : customFields) {
-//			customField.setAllowedValues(editableFieldsMap.get(customField.getId()).getAlloweValues());
-//		}
-//	}
+    // private static void setAllowValuesForCustomFields(CustomField[] customFields,
+    // IssueField[] editableFields) {
+    // Map<String, IssueField> editableFieldsMap = new HashMap<String,
+    // IssueField>(editableFields.length + 1, 1);
+    //
+    // // transform editable fields into HasMap
+    // for (IssueField editableField : editableFields) {
+    // editableFieldsMap.put(editableField.getId(), editableField);
+    // }
+    //
+    // for (CustomField customField : customFields) {
+    // customField.setAllowedValues(editableFieldsMap.get(customField.getId()).getAlloweValues());
+    // }
+    // }
 
-    private static boolean isVersionMissingInProjectCache(
-            Iterable<com.atlassian.jira.rest.client.domain.Version> affectedVersions,
-            Iterable<com.atlassian.jira.rest.client.domain.Version> fixVersions, Project project,
+    private static boolean isVersionMissingInProjectCache(Iterable<Version> affectedVersions, Iterable<Version> fixVersions, JiraProject project,
             IProgressMonitor monitor) {
 
         if (affectedVersions != null) {
-            for (com.atlassian.jira.rest.client.domain.Version affectedVersion : affectedVersions) {
+            for (Version affectedVersion : affectedVersions) {
                 if (project.getVersion(affectedVersion.getName()) == null) {
                     return true;
                 }
@@ -331,7 +352,7 @@ public class JiraRestConverter {
         }
 
         if (fixVersions != null) {
-            for (com.atlassian.jira.rest.client.domain.Version fixVersion : fixVersions) {
+            for (Version fixVersion : fixVersions) {
                 if (project.getVersion(fixVersion.getName()) == null) {
                     return true;
                 }
@@ -342,182 +363,115 @@ public class JiraRestConverter {
 
     }
 
-    private static CustomField[] getCustomFieldsFromIssue(Issue issue) {
-        JSONObject editmeta = JsonParseUtil.getOptionalJsonObject(issue.getRawObject(), "editmeta");
+    private static JiraCustomField[] getCustomFieldsFromIssue(Issue issue, JiraClientCache cache) throws JiraException {
+        List<JiraCustomField> customFields = new ArrayList<>();
+        Map<String, CimFieldInfo> cimFieldInfoForProject = cache.getFieldMetadata(issue.getProject().getId(), issue.getIssueType().getId());
 
-        if (editmeta != null) {
+        for (IssueField issueField : issue.getFields()) {
 
-            JSONObject fieldsFromEditMeta = JsonParseUtil.getOptionalJsonObject(editmeta, "fields");
-
-            if (fieldsFromEditMeta != null) {
-
-                List<CustomField> customFields = new ArrayList<CustomField>();
-
-                for (Field field : issue.getFields()) {
-                    if (field.getId().startsWith("customfield") && field.getValue() != null) { //$NON-NLS-1$
-
-                        JSONObject jsonFieldFromEditMeta = JsonParseUtil.getOptionalJsonObject(fieldsFromEditMeta,
-                                field.getId());
-
-                        if (jsonFieldFromEditMeta != null) {
-                            try {
-                                JSONObject schema = (JSONObject) jsonFieldFromEditMeta.get("schema");
-
-                                if (schema != null) {
-
-                                    String longType = JsonParseUtil.getOptionalString(schema, "custom");
-
-                                    if (longType != null) {
-                                        CustomField customField = generateCustomField(field, longType);
-                                        if (customField != null) {
-                                            customFields.add(customField);
-                                        }
-                                    } else {
-                                        StatusHandler.log(new org.eclipse.core.runtime.Status(
-                                                IStatus.WARNING,
-                                                JiraCorePlugin.ID_PLUGIN,
-                                                NLS.bind(
-                                                        "Unable to parse type information (edit meta) for field [{0}].", field.getId()))); //$NON-NLS-1$
-                                    }
-                                } else {
-                                    StatusHandler.log(new org.eclipse.core.runtime.Status(
-                                            IStatus.WARNING,
-                                            JiraCorePlugin.ID_PLUGIN,
-                                            NLS.bind(
-                                                    "Unable to parse type information (edit meta) for field [{0}].", field.getId()))); //$NON-NLS-1$
-                                }
-
-                            } catch (JSONException e) {
-                                StatusHandler.log(new org.eclipse.core.runtime.Status(
-                                        IStatus.WARNING,
-                                        JiraCorePlugin.ID_PLUGIN,
-                                        NLS.bind(
-                                                "Unable to parse type information (edit meta) for field [{0}].", field.getId()))); //$NON-NLS-1$
-                            }
-                        } else {
-                            // skip this (it is common to have not visible custom fields like GH Rank)
-//							StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING,
-//									JiraCorePlugin.ID_PLUGIN, NLS.bind(
-//											"Type information (edit meta) for field [{0}] not found.", field.getId()))); //$NON-NLS-1$
+            if (issueField.getId().startsWith("customfield") && issueField.getValue() != null) { //$NON-NLS-1$
+                CimFieldInfo cim = cimFieldInfoForProject.get(issueField.getId());
+                if (cim != null) {
+                    String longType = cim.getSchema().getCustom();
+                    if (longType != null) {
+                        JiraCustomField customField = generateCustomField(issueField, longType);
+                        if (customField != null) {
+                            customFields.add(customField);
                         }
-                    }
-                }
-
-                return customFields.toArray(new CustomField[customFields.size()]);
-            } else {
-                StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
-                        "Unable to retrieve fields' type information (edit meta). Skipping custom fields parsing.")); //$NON-NLS-1$
-            }
-
-        } else {
-            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
-                    "Unable to retrieve fields' type information (edit meta). Skipping custom fields parsing.")); //$NON-NLS-1$
-        }
-
-        return new CustomField[0];
-    }
-
-    private static IssueField[] getEditableFieldsFromIssue(Issue issue) {
-
-        List<IssueField> editableFields = new ArrayList<IssueField>();
-
-        JSONObject editmeta = JsonParseUtil.getOptionalJsonObject(issue.getRawObject(), "editmeta");
-
-        if (editmeta != null) {
-
-            try {
-                JSONObject fieldsFromEditMeta = JsonParseUtil.getNestedObject(editmeta, "fields");
-
-                if (fieldsFromEditMeta != null) {
-
-                    @SuppressWarnings("rawtypes")
-                    Iterator keys = fieldsFromEditMeta.keys();
-
-                    while (keys.hasNext()) {
-                        String key = (String) keys.next();
-                        JSONObject jsonFieldFromEditMeta = fieldsFromEditMeta.getJSONObject(key);
-//
-                        if (jsonFieldFromEditMeta != null) {
-                            boolean required = jsonFieldFromEditMeta.getBoolean("required");
-                            String name = jsonFieldFromEditMeta.getString(JiraRestFields.NAME);
-
-                            IssueField editableField = new IssueField(key, name);
-                            editableField.setRequired(required);
-
-                            Optional<JSONArray> allowedValuesObject = JsonParseUtil.getOptionalArray(
-                                    jsonFieldFromEditMeta, "allowedValues"); //$NON-NLS-1$
-
-                            if (allowedValuesObject != null
-                                    && !Optional.<JSONArray> absent().equals(allowedValuesObject)) {
-                                List<AllowedValue> allowedValues = new ArrayList<AllowedValue>();
-
-                                JSONArray alloweValuesArray = allowedValuesObject.get();
-                                for (int i = 0; i < alloweValuesArray.length(); ++i) {
-                                    JSONObject allowedValue = alloweValuesArray.getJSONObject(i);
-                                    String optionalId = JsonParseUtil.getOptionalString(allowedValue, "id");
-                                    String optionalValue = JsonParseUtil.getOptionalString(allowedValue, "value");
-                                    if (optionalValue != null && optionalId != null) {
-                                        allowedValues.add(new AllowedValue(optionalId, optionalValue));
-
-                                    }
-                                }
-
-                                editableField.setAllowedValues(allowedValues);
-                            }
-
-                            JSONObject schema = (JSONObject) jsonFieldFromEditMeta.get("schema");
-
-                            if (schema != null) {
-
-                                String longTypeCustom = JsonParseUtil.getOptionalString(schema, "custom");
-                                String longTypeSystem = JsonParseUtil.getOptionalString(schema, "system");
-
-                                if (longTypeCustom != null) {
-                                    editableField.setType(longTypeCustom);
-                                } else if (longTypeSystem != null) {
-                                    editableField.setType(longTypeSystem);
-                                }
-                            }
-                            editableFields.add(editableField);
-
-                        } else {
-                            StatusHandler.log(new org.eclipse.core.runtime.Status(
-                                    IStatus.WARNING,
-                                    JiraCorePlugin.ID_PLUGIN,
-                                    NLS.bind(
-                                            "Unable to retrieve field' type information (edit meta) for [{0}]. Skipping this one.", key))); //$NON-NLS-1$
-                        }
+                    } else {
+                        StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
+                                NLS.bind("Unable to parse type information (edit meta) for field [{0}:{1}:{2}].", //$NON-NLS-1$
+                                        new Object[] { issueField.getId(), issueField.getName(), longType })));
                     }
                 } else {
-                    StatusHandler.log(new org.eclipse.core.runtime.Status(
-                            IStatus.WARNING,
-                            JiraCorePlugin.ID_PLUGIN,
-                            NLS.bind(
-                                    "Unable to retrieve 'fields' information (edit meta) for issue [{0}]. Skipping editable fields parsing.", issue.getKey()))); //$NON-NLS-1$
+                    // StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.INFO,
+                    // JiraCorePlugin.ID_PLUGIN,
+                    // NLS.bind("Unable to find meta information for field [{0}:{1}].",
+                    // issueField.getId(), issueField.getName()))); //$NON-NLS-1$
                 }
-            } catch (JSONException e) {
-                StatusHandler.log(new org.eclipse.core.runtime.Status(
-                        IStatus.WARNING,
-                        JiraCorePlugin.ID_PLUGIN,
-                        NLS.bind(
-                                "Unable to parse type information (edit meta) for issue [{0}]. Skipping editable fields parsing.", issue.getKey()))); //$NON-NLS-1$
+                //
+                // } catch (JSONException e) {
+                // StatusHandler.log(new org.eclipse.core.runtime.Status(
+                // IStatus.WARNING,
+                // JiraCorePlugin.ID_PLUGIN,
+                // NLS.bind(
+                // "Unable to parse type information (edit meta) for field [{0}].",
+                // field.getId()))); //$NON-NLS-1$
+                // }
+                // } else {
+                // // skip this (it is common to have not visible custom fields like GH Rank)
+                // // StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING,
+                // // JiraCorePlugin.ID_PLUGIN, NLS.bind(
+                // // "Type information (edit meta) for field [{0}] not found.",
+                // field.getId()))); //$NON-NLS-1$
+                // }
+                // }
             }
-        } else {
-            StatusHandler.log(new org.eclipse.core.runtime.Status(
-                    IStatus.WARNING,
-                    JiraCorePlugin.ID_PLUGIN,
-                    NLS.bind(
-                            "Unable to retrieve 'editmeta' information for issue [{0}]. Skipping editable fields parsing.", issue.getKey()))); //$NON-NLS-1$
         }
-
-        if (editableFields.size() > 0) {
-            return editableFields.toArray(new IssueField[editableFields.size()]);
-        }
-
-        return new IssueField[0];
+        return customFields.toArray(new JiraCustomField[0]);
     }
 
-    private static CustomField generateCustomField(Field field, String longType) {
+    private static JiraIssueField[] getEditableFieldsFromIssue(Issue issue, JiraClientCache cache) throws JiraException {
+
+        List<JiraIssueField> editableFields = new ArrayList<>();
+        Map<String, CimFieldInfo> cimFieldInfoForProject = cache.getFieldMetadata(issue.getProject().getId(), issue.getIssueType().getId());
+
+        for (IssueField issueField : issue.getFields()) {
+            CimFieldInfo cim = cimFieldInfoForProject.get(issueField.getId());
+            if (cim != null) {
+                boolean required = cim.isRequired();
+                String name = issueField.getName();
+                JiraIssueField editableField = new JiraIssueField(issueField.getId(), name);
+                editableField.setRequired(required);
+                if (cim.getAllowedValues() != null) {
+                    List<JiraAllowedValue> allowedValues = new ArrayList<>();
+                    for (Object allowedValue : cim.getAllowedValues()) {
+                        if (allowedValue instanceof CustomFieldOption) {
+                            CustomFieldOption value = (CustomFieldOption) allowedValue;
+                            String optionalId = value.getId() + "";
+                            String optionalValue = value.getValue();
+                            if (optionalValue != null && optionalId != null) {
+                                allowedValues.add(new JiraAllowedValue(optionalId, optionalValue));
+                            }
+                        } else if (allowedValue instanceof BasicPriority) {
+                            BasicPriority priority2 = (BasicPriority) allowedValue;
+                            allowedValues.add(new JiraAllowedValue(priority2.getId() + "", priority2.getName()));
+                        } else if (allowedValue instanceof IssueType) {
+                            IssueType issueType = (IssueType) allowedValue;
+                            allowedValues.add(new JiraAllowedValue(issueType.getId() + "", issueType.getName()));
+                        } else if (allowedValue instanceof BasicProject) {
+                            BasicProject basicProject = (BasicProject) allowedValue;
+                            allowedValues.add(new JiraAllowedValue(basicProject.getId() + "", basicProject.getName()));
+                        } else {
+                            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN, NLS.bind(
+                                    "Unable extract value for field [{0}:{1}:{2}].", new Object[] { issueField.getId(), issueField.getName(), allowedValue }))); //$NON-NLS-1$
+                        }
+                    }
+                    editableField.setAllowedValues(allowedValues);
+                }
+
+                String longTypeCustom = cim.getSchema().getCustom();
+                String longTypeSystem = cim.getSchema().getSystem();
+
+                if (longTypeCustom != null) {
+                    editableField.setType(longTypeCustom);
+                } else if (longTypeSystem != null) {
+                    editableField.setType(longTypeSystem);
+                }
+                editableFields.add(editableField);
+            } else {
+                // final String name = issueField.getName();
+                // StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING,
+                // JiraCorePlugin.ID_PLUGIN,
+                // NLS.bind("Unable to find metadata information for field [{0}:{1}].",
+                // issueField.getId(), name))); //$NON-NLS-1$
+            }
+        }
+
+        return editableFields.toArray(new JiraIssueField[0]);
+    }
+
+    private static JiraCustomField generateCustomField(IssueField field, String longType) {
 
         boolean readonly = false;
 
@@ -533,97 +487,124 @@ public class JiraRestConverter {
             case URL:
             case EPIC_LABEL:
             case EPIC_LINK:
-                values = ImmutableList.of(field.getValue().toString());
+                values = List.of(field.getValue().toString());
                 break;
             case DATE:
             case DATETIME:
-                values = ImmutableList.of(field.getValue().toString());
+                values = List.of(field.getValue().toString());
                 break;
             case FLOATFIELD:
-                values = ImmutableList.of(field.getValue().toString());
+                values = List.of(field.getValue().toString());
                 break;
             case MULTIUSERPICKER:
                 // no support for multi users on the Mylyn side
-//			values = JiraRestCustomFieldsParser.parseMultiUserPicker(field);
-                values = ImmutableList.of(StringUtils.join(JiraRestCustomFieldsParser.parseMultiUserPicker(field), ", ")); //$NON-NLS-1$
+                // values = JiraRestCustomFieldsParser.parseMultiUserPicker(field);
+                values = List.of(StringUtils.join(JiraRestCustomFieldsParser.parseMultiUserPicker(field), ", ")); //$NON-NLS-1$
                 break;
             case USERPICKER:
-                values = ImmutableList.of(JiraRestCustomFieldsParser.parseUserPicker(field));
+                values = List.of(JiraRestCustomFieldsParser.parseUserPicker(field));
                 break;
             case SELECT:
             case RADIOBUTTONS:
-                values = ImmutableList.of(JiraRestCustomFieldsParser.parseSelect(field));
+                values = List.of(JiraRestCustomFieldsParser.parseSelect(field));
                 break;
             case MULTISELECT:
             case MULTICHECKBOXES:
                 values = JiraRestCustomFieldsParser.parseMultiSelect(field);
                 break;
             case LABELSS:
-                values = ImmutableList.of(StringUtils.join(JiraRestCustomFieldsParser.parseLabels(field), " ")); //$NON-NLS-1$
+                values = List.of(StringUtils.join(JiraRestCustomFieldsParser.parseLabels(field), " ")); //$NON-NLS-1$
                 readonly = true;
                 break;
             case GROUPPICKER:
-                values = ImmutableList.of(JiraRestCustomFieldsParser.parseGroupPicker(field));
+                values = List.of(JiraRestCustomFieldsParser.parseGroupPicker(field));
                 break;
             case MULTIGROUPPICKER:
-                values = ImmutableList.of(StringUtils.join(JiraRestCustomFieldsParser.parseMultiGroupPicker(field),
-                        ", ")); //$NON-NLS-1$
+                values = List.of(StringUtils.join(JiraRestCustomFieldsParser.parseMultiGroupPicker(field), ", ")); //$NON-NLS-1$
                 break;
             default:
-                // not supported custom field
+                if (fieldType.getTaskType() != null) { // Ignore fields we don't care about, or don't support yet
+                    StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
+                            NLS.bind("Unable extract value for field [{0}:{1}:{2}].", new Object[] { field.getId(), field.getName(), longType }))); //$NON-NLS-1$
+
+                    // not supported custom field
+                }
             }
 
             if (values != null && !values.isEmpty()) {
 
-                CustomField customField = new CustomField(field.getId(), longType, field.getName(), values);
+                JiraCustomField customField = new JiraCustomField(field.getId(), longType, field.getName(), values);
                 customField.setReadOnly(readonly);
 
                 return customField;
             }
-        } catch (JSONException e) {
-            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
-                    e.getMessage()));
+        } catch (JSONException | URISyntaxException e) {
+            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN, e.getMessage()));
         }
 
         return null;
     }
 
-    private static Long getRankFromIssue(Issue issue) {
-        JSONObject schemaFields = JsonParseUtil.getOptionalJsonObject(issue.getRawObject(),
-                IssueRestClient.Expandos.SCHEMA.getFieldName());
-
-        if (schemaFields != null) {
-
-            for (Field field : issue.getFields()) {
-                if (field.getId().startsWith("customfield") && field.getValue() != null) { //$NON-NLS-1$
-
-                    JSONObject jsonFieldFromSchema = JsonParseUtil.getOptionalJsonObject(schemaFields, field.getId());
-
-                    if (jsonFieldFromSchema != null) {
-                        String longType = JsonParseUtil.getOptionalString(jsonFieldFromSchema, "custom"); //$NON-NLS-1$
-
-                        if (JiraAttribute.RANK.getType().getKey().equals(longType)) {
-                            try {
-                                return Long.valueOf(field.getValue().toString());
-                            } catch (NumberFormatException e) {
-                                StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING,
-                                        JiraCorePlugin.ID_PLUGIN, NLS.bind(
-                                                "Unable to parse Rank value [{0}].", field.getValue().toString()))); //$NON-NLS-1$
-                            }
+    private static Long getRankFromIssue(Issue issue, JiraClientCache cache) throws JiraException {
+        Map<String, CimFieldInfo> cimFieldInfoForProject = cache.getFieldMetadata(issue.getProject().getId(), issue.getIssueType().getId());
+        for (IssueField issueField : issue.getFields()) {
+            if (issueField.getId().startsWith("customfield") && issueField.getValue() != null) { //$NON-NLS-1$
+                CimFieldInfo cim = cimFieldInfoForProject.get(issueField.getId());
+                if (cim != null) {
+                    if (JiraAttribute.RANK.getType().getKey().equals(cim.getSchema().getCustom())) {
+                        try {
+                            return Long.valueOf(issueField.getValue().toString());
+                        } catch (NumberFormatException e) {
+                            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
+                                    NLS.bind("Unable to parse Rank value [{0}].", issueField.getValue().toString()))); //$NON-NLS-1$
                         }
+
                     }
                 }
             }
-        } else {
-            StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING, JiraCorePlugin.ID_PLUGIN,
-                    "Unable to retrieve fields' type information (schema). Skipping searching for Rank.")); //$NON-NLS-1$
         }
-
+        // JSONObject schemaFields =
+        // JsonParseUtil.getOptionalJsonObject(issue.getRawObject(),
+        // IssueRestClient.Expandos.SCHEMA.getFieldName());
+        //
+        // if (schemaFields != null) {
+        //
+        // for (IssueField field : issue.getFields()) {
+        // if (field.getId().startsWith("customfield") && field.getValue() != null) {
+        // //$NON-NLS-1$
+        //
+        // JSONObject jsonFieldFromSchema =
+        // JsonParseUtil.getOptionalJsonObject(schemaFields, field.getId());
+        //
+        // if (jsonFieldFromSchema != null) {
+        // String longType = JsonParseUtil.getOptionalString(jsonFieldFromSchema,
+        // "custom"); //$NON-NLS-1$
+        //
+        // if (JiraAttribute.RANK.getType().getKey().equals(longType)) {
+        // try {
+        // return Long.valueOf(field.getValue().toString());
+        // } catch (NumberFormatException e) {
+        // StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING,
+        // JiraCorePlugin.ID_PLUGIN, NLS.bind(
+        // "Unable to parse Rank value [{0}].", field.getValue().toString())));
+        // //$NON-NLS-1$
+        // }
+        // }
+        // }
+        // }
+        // }
+        // } else {
+        // StatusHandler.log(new org.eclipse.core.runtime.Status(IStatus.WARNING,
+        // JiraCorePlugin.ID_PLUGIN,
+        // "Unable to retrieve fields' type information (schema). Skipping searching for
+        // Rank.")); //$NON-NLS-1$
+        // }
+        //
         return null;
     }
 
     private static JiraWorkLog[] convertWorklogs(Iterable<Worklog> worklogs) {
-        List<JiraWorkLog> outWorkLogs = new ArrayList<JiraWorkLog>();
+        List<JiraWorkLog> outWorkLogs = new ArrayList<>();
 
         for (Worklog worklog : worklogs) {
             outWorkLogs.add(convert(worklog));
@@ -640,37 +621,36 @@ public class JiraRestConverter {
             outWorklog.setAuthor(worklog.getAuthor().getDisplayName());
         }
         outWorklog.setComment(worklog.getComment());
-        outWorklog.setCreated(worklog.getCreationDate().toDate());
-//		outWorklog.setGroupLevel(worklog.get)
-//		outWorklog.setId(worklog.get)
-//		outWorklog.setNewRemainingEstimate(worklog.get);
-//		outWorklog.setRoleLevelId(worklog.get);
-        outWorklog.setStartDate(worklog.getStartDate().toDate());
+        outWorklog.setCreated(worklog.getCreationDate().toInstant());
+        // outWorklog.setGroupLevel(worklog.get)
+        // outWorklog.setId(worklog.get)
+        // outWorklog.setNewRemainingEstimate(worklog.get);
+        // outWorklog.setRoleLevelId(worklog.get);
+        outWorklog.setStartDate(worklog.getStartDate().toInstant());
         outWorklog.setTimeSpent(worklog.getMinutesSpent() * 60);
         if (worklog.getUpdateAuthor() != null) {
             outWorklog.setUpdateAuthor(worklog.getUpdateAuthor().getDisplayName());
         }
-        outWorklog.setUpdated(worklog.getUpdateDate().toDate());
+        outWorklog.setUpdated(worklog.getUpdateDate().toInstant());
 
         return outWorklog;
     }
 
-    private static Attachment[] convertAttachments(
-            Iterable<com.atlassian.jira.rest.client.domain.Attachment> attachments) {
+    private static JiraAttachment[] convertAttachments(Iterable<Attachment> attachments) {
 
-        List<Attachment> outAttachments = new ArrayList<Attachment>();
+        List<JiraAttachment> outAttachments = new ArrayList<>();
 
-        for (com.atlassian.jira.rest.client.domain.Attachment attachment : attachments) {
+        for (Attachment attachment : attachments) {
             outAttachments.add(convert(attachment));
         }
 
-        return outAttachments.toArray(new Attachment[outAttachments.size()]);
+        return outAttachments.toArray(new JiraAttachment[outAttachments.size()]);
     }
 
-    private static Attachment convert(com.atlassian.jira.rest.client.domain.Attachment attachment) {
-        Attachment outAttachment = new Attachment();
+    private static JiraAttachment convert(Attachment attachment) {
+        JiraAttachment outAttachment = new JiraAttachment();
 
-        outAttachment.setId(attachment.getId().toString());
+        outAttachment.setId(attachment.getSelf().toString()); // FIXME which field??? attachment.getId().toString())
 
         BasicUser author = attachment.getAuthor();
 
@@ -686,7 +666,7 @@ public class JiraRestConverter {
             outAttachment.setAuthorDisplayName("Unknown"); //$NON-NLS-1$
         }
 
-        outAttachment.setCreated(attachment.getCreationDate().toDate());
+        outAttachment.setCreated(attachment.getCreationDate().toInstant());
         outAttachment.setName(attachment.getFilename());
         outAttachment.setSize(attachment.getSize());
         outAttachment.setContent(attachment.getContentUri());
@@ -694,18 +674,18 @@ public class JiraRestConverter {
         return outAttachment;
     }
 
-    private static Comment[] convertComments(Iterable<com.atlassian.jira.rest.client.domain.Comment> comments) {
-        List<Comment> outComments = new ArrayList<Comment>();
+    private static JiraComment[] convertComments(Iterable<Comment> comments) {
+        List<JiraComment> outComments = new ArrayList<>();
 
-        for (com.atlassian.jira.rest.client.domain.Comment comment : comments) {
+        for (Comment comment : comments) {
             outComments.add(convert(comment));
         }
 
-        return outComments.toArray(new Comment[outComments.size()]);
+        return outComments.toArray(new JiraComment[outComments.size()]);
     }
 
-    private static Comment convert(com.atlassian.jira.rest.client.domain.Comment comment) {
-        Comment outComment = new Comment();
+    private static JiraComment convert(Comment comment) {
+        JiraComment outComment = new JiraComment();
 
         BasicUser author = comment.getAuthor();
 
@@ -722,7 +702,7 @@ public class JiraRestConverter {
         }
 
         outComment.setComment(comment.getBody());
-        outComment.setCreated(comment.getCreationDate().toDate());
+        outComment.setCreated(comment.getCreationDate().toInstant());
         outComment.setMarkupDetected(false);
 
         Visibility visibility = comment.getVisibility();
@@ -733,46 +713,46 @@ public class JiraRestConverter {
         return outComment;
     }
 
-    private static IssueLink[] convertIssueLinks(Iterable<com.atlassian.jira.rest.client.domain.IssueLink> issueLinks) {
+    private static JiraIssueLink[] convertIssueLinks(Iterable<IssueLink> issueLinks) {
 
-        List<IssueLink> outIssueLinks = new ArrayList<IssueLink>();
+        List<JiraIssueLink> outIssueLinks = new ArrayList<>();
 
-        for (com.atlassian.jira.rest.client.domain.IssueLink issueLink : issueLinks) {
+        for (IssueLink issueLink : issueLinks) {
             outIssueLinks.add(convert(issueLink));
         }
 
-        return outIssueLinks.toArray(new IssueLink[outIssueLinks.size()]);
+        return outIssueLinks.toArray(new JiraIssueLink[outIssueLinks.size()]);
     }
 
-    private static IssueLink convert(com.atlassian.jira.rest.client.domain.IssueLink issueLink) {
-        IssueLink outIssueLink = new IssueLink(issueLink.getTargetIssueId().toString(), issueLink.getTargetIssueKey(),
-                issueLink.getIssueLinkType().getName(), issueLink.getIssueLinkType().getName(),
+    private static JiraIssueLink convert(IssueLink issueLink) {
+        JiraIssueLink outIssueLink = new JiraIssueLink(issueLink.getTargetIssueKey(), // FIXME issueLink.getTargetIssueId().toString(),
+                issueLink.getTargetIssueKey(), issueLink.getIssueLinkType().getName(), issueLink.getIssueLinkType().getName(),
                 issueLink.getIssueLinkType().getDescription(), ""); //$NON-NLS-1$
 
         return outIssueLink;
 
     }
 
-    static Version[] convertVersions(Iterable<com.atlassian.jira.rest.client.domain.Version> versions) {
-        List<Version> outVersions = new ArrayList<Version>();
+    static JiraVersion[] convertVersions(Iterable<Version> versions) {
+        List<JiraVersion> outVersions = new ArrayList<>();
 
-        for (com.atlassian.jira.rest.client.domain.Version version : versions) {
-//			if (!version.isArchived()) {
+        for (Version version : versions) {
+            // if (!version.isArchived()) {
             outVersions.add(convert(version));
-//			}
+            // }
         }
 
         Collections.reverse(outVersions);
 
-        return outVersions.toArray(new Version[outVersions.size()]);
+        return outVersions.toArray(new JiraVersion[outVersions.size()]);
     }
 
-    private static Version convert(com.atlassian.jira.rest.client.domain.Version version) {
-        Version outVersion = new Version(version.getId().toString(), version.getName());
+    private static JiraVersion convert(Version version) {
+        JiraVersion outVersion = new JiraVersion(version.getId().toString(), version.getName());
 
-        DateTime releaseDate = version.getReleaseDate();
+        OffsetDateTime releaseDate = version.getReleaseDate();
         if (releaseDate != null) {
-            outVersion.setReleaseDate(releaseDate.toDate());
+            outVersion.setReleaseDate(releaseDate.toInstant());
         }
 
         outVersion.setArchived(version.isArchived());
@@ -781,61 +761,55 @@ public class JiraRestConverter {
         return outVersion;
     }
 
-    static Component[] convertComponents(Iterable<BasicComponent> components) {
+    static JiraComponent[] convertComponents(Iterable<BasicComponent> components) {
 
-        List<Component> outComponents = new ArrayList<Component>();
+        List<JiraComponent> outComponents = new ArrayList<>();
 
         for (BasicComponent component : components) {
             outComponents.add(convert(component));
         }
 
-        return outComponents.toArray(new Component[outComponents.size()]);
+        return outComponents.toArray(new JiraComponent[outComponents.size()]);
     }
 
-    private static Component convert(BasicComponent component) {
-        Component outComponent = new Component(component.getId().toString());
+    private static JiraComponent convert(BasicComponent component) {
+        JiraComponent outComponent = new JiraComponent(component.getId().toString());
 
         outComponent.setName(component.getName());
 
         return outComponent;
     }
 
-    private static IssueType convert(BasicIssueType issueType) {
-        IssueType outIssueType = new IssueType(issueType.getId().toString(), issueType.getName(), issueType.isSubtask());
+    private static JiraSubtask[] convert(Iterable<Subtask> allSubtasks) {
+        List<JiraSubtask> subtasks = new ArrayList<>();
 
-        return outIssueType;
-    }
-
-    private static Subtask[] convert(Iterable<com.atlassian.jira.rest.client.domain.Subtask> allSubtasks) {
-        List<Subtask> subtasks = new ArrayList<Subtask>();
-
-        for (com.atlassian.jira.rest.client.domain.Subtask subtask : allSubtasks) {
+        for (Subtask subtask : allSubtasks) {
             subtasks.add(convert(subtask));
         }
 
-        return subtasks.toArray(new Subtask[subtasks.size()]);
+        return subtasks.toArray(new JiraSubtask[subtasks.size()]);
     }
 
-    private static Subtask convert(com.atlassian.jira.rest.client.domain.Subtask subtask) {
-        return new Subtask(subtask.getId().toString(), subtask.getIssueKey());
+    private static JiraSubtask convert(Subtask subtask) {
+        return new JiraSubtask(subtask.getIssueKey() /* //FIXME subtask.getId().toString() */, subtask.getIssueKey());
     }
 
-//	private static String generateIssueId(String uri, String issueKey) {
-//		return uri + "_" + issueKey.replace('-', '*');
-//	}
+    // private static String generateIssueId(String uri, String issueKey) {
+    // return uri + "_" + issueKey.replace('-', '*');
+    // }
 
-    public static IssueType[] convertIssueTypes(Iterable<com.atlassian.jira.rest.client.domain.IssueType> allIssueTypes) {
-        List<IssueType> issueTypes = new ArrayList<IssueType>();
+    public static JiraIssueType[] convertIssueTypes(Iterable<IssueType> allIssueTypes) {
+        List<JiraIssueType> issueTypes = new ArrayList<>();
 
-        for (com.atlassian.jira.rest.client.domain.IssueType issueType : allIssueTypes) {
+        for (IssueType issueType : allIssueTypes) {
             issueTypes.add(convert(issueType));
         }
 
-        return issueTypes.toArray(new IssueType[issueTypes.size()]);
+        return issueTypes.toArray(new JiraIssueType[issueTypes.size()]);
     }
 
-    private static IssueType convert(com.atlassian.jira.rest.client.domain.IssueType issueType) {
-        IssueType outIssueType = new IssueType(issueType.getId().toString(), issueType.getName(), issueType.isSubtask());
+    private static JiraIssueType convert(IssueType issueType) {
+        JiraIssueType outIssueType = new JiraIssueType(issueType.getId().toString(), issueType.getName(), issueType.isSubtask());
 
         outIssueType.setDescription(issueType.getDescription());
         outIssueType.setIcon(issueType.getIconUri().toString());
@@ -844,7 +818,7 @@ public class JiraRestConverter {
     }
 
     public static List<JiraIssue> convertIssues(Iterable<? extends BasicIssue> issues) {
-        List<JiraIssue> outIssues = new ArrayList<JiraIssue>();
+        List<JiraIssue> outIssues = new ArrayList<>();
 
         for (BasicIssue issue : issues) {
             outIssues.add(convert(issue));
@@ -874,36 +848,37 @@ public class JiraRestConverter {
             worklogInputBuilder.setAdjustEstimateLeave();
             break;
         case SET:
-            worklogInputBuilder.setAdjustEstimateNew((jiraWorklog.getNewRemainingEstimate() / 60) + "m"); //$NON-NLS-1$
+            worklogInputBuilder.setAdjustEstimateNew(jiraWorklog.getNewRemainingEstimate() / 60 + "m"); //$NON-NLS-1$
             break;
         case REDUCE:
-            worklogInputBuilder.setAdjustEstimateManual((jiraWorklog.getNewRemainingEstimate() / 60) + "m"); //$NON-NLS-1$
+            worklogInputBuilder.setAdjustEstimateManual(jiraWorklog.getNewRemainingEstimate() / 60 + "m"); //$NON-NLS-1$
             break;
         }
 
         worklogInputBuilder.setComment(jiraWorklog.getComment());
-        worklogInputBuilder.setStartDate(new DateTime(jiraWorklog.getStartDate()));
-//		worklogInputBuilder.setMinutesSpent(new Long(jiraWorklog.getTimeSpent() / 60).intValue());
-        worklogInputBuilder.setTimeSpent(String.valueOf(jiraWorklog.getTimeSpent() / 60) + "m"); //$NON-NLS-1$
-//		worklogInputBuilder.setAuthor(new )
+        worklogInputBuilder.setStartDate(OffsetDateTime.ofInstant(jiraWorklog.getStartDate(), ZoneId.systemDefault()));
+        // worklogInputBuilder.setMinutesSpent(new Long(jiraWorklog.getTimeSpent() /
+        // 60).intValue());
+        worklogInputBuilder.setMinutesSpent((int) (jiraWorklog.getTimeSpent() / 60)); // $NON-NLS-1$
+        // worklogInputBuilder.setAuthor(new )
 
         return worklogInputBuilder.build();
     }
 
-    public static ServerInfo convert(com.atlassian.jira.rest.client.domain.ServerInfo serverInfo) {
-        ServerInfo serverInfoOut = new ServerInfo();
+    public static JiraServerInfo convert(ServerInfo serverInfo) {
+        JiraServerInfo serverInfoOut = new JiraServerInfo();
 
         serverInfoOut.setBaseUrl(serverInfo.getBaseUri().toString());
         serverInfoOut.setWebBaseUrl(serverInfo.getBaseUri().toString());
-        serverInfoOut.setBuildDate(serverInfo.getBuildDate().toDate());
-        serverInfoOut.setBuildNumber(Integer.valueOf(serverInfo.getBuildNumber()).toString());
+        serverInfoOut.setBuildDate(serverInfo.getBuildDate().toInstant());
+        serverInfoOut.setBuildNumber(Integer.toString(serverInfo.getBuildNumber()));
         serverInfoOut.setVersion(serverInfo.getVersion());
 
         return serverInfoOut;
     }
 
     public static Iterable<JiraAction> convertTransitions(Iterable<Transition> transitions) {
-        List<JiraAction> actions = new ArrayList<JiraAction>();
+        List<JiraAction> actions = new ArrayList<>();
 
         for (Transition transition : transitions) {
             actions.add(convert(transition));
@@ -915,10 +890,11 @@ public class JiraRestConverter {
     private static JiraAction convert(Transition transition) {
         JiraAction action = new JiraAction(Integer.toString(transition.getId()), transition.getName());
 
-        for (com.atlassian.jira.rest.client.domain.Transition.Field field : transition.getFields()) {
+        for (Transition.Field field : transition.getFields()) {
 
-            // TODO rest set field name once available https://studio.atlassian.com/browse/JRJC-113
-            IssueField outField = new IssueField(field.getId(), field.getId());
+            // TODO rest set field name once available
+            // https://studio.atlassian.com/browse/JRJC-113
+            JiraIssueField outField = new JiraIssueField(field.getId(), field.getId());
             outField.setType(field.getType());
             outField.setRequired(field.isRequired());
 
@@ -928,11 +904,11 @@ public class JiraRestConverter {
         return action;
     }
 
-    public static Iterable<com.atlassian.jira.rest.client.domain.Version> convert(Version[] reportedVersions) {
-        List<com.atlassian.jira.rest.client.domain.Version> outReportedVersions = new ArrayList<com.atlassian.jira.rest.client.domain.Version>();
+    public static Iterable<Version> convert(JiraVersion[] reportedVersions) {
+        List<Version> outReportedVersions = new ArrayList<>();
 
         if (reportedVersions != null) {
-            for (Version version : reportedVersions) {
+            for (JiraVersion version : reportedVersions) {
                 outReportedVersions.add(convert(version));
             }
         }
@@ -940,17 +916,16 @@ public class JiraRestConverter {
         return outReportedVersions;
     }
 
-    private static com.atlassian.jira.rest.client.domain.Version convert(Version version) {
-        com.atlassian.jira.rest.client.domain.Version outVersion = new com.atlassian.jira.rest.client.domain.Version(
-                null, Long.valueOf(version.getId()), version.getName(), null, false, false, null);
+    private static Version convert(JiraVersion version) {
+        Version outVersion = new Version(null, Long.valueOf(version.getId()), version.getName(), null, false, false, null);
         return outVersion;
     }
 
-    public static Iterable<BasicComponent> convert(Component[] components) {
-        List<BasicComponent> outComponents = new ArrayList<BasicComponent>();
+    public static Iterable<BasicComponent> convert(JiraComponent[] components) {
+        List<BasicComponent> outComponents = new ArrayList<>();
 
         if (components != null) {
-            for (Component component : components) {
+            for (JiraComponent component : components) {
                 outComponents.add(convert(component));
             }
         }
@@ -958,22 +933,22 @@ public class JiraRestConverter {
         return outComponents;
     }
 
-    private static BasicComponent convert(Component component) {
+    private static BasicComponent convert(JiraComponent component) {
         return new BasicComponent(null, Long.valueOf(component.getId()), component.getName(), null);
     }
 
-    public static NamedFilter[] convertNamedFilters(Iterable<FavouriteFilter> favouriteFilters) {
-        List<NamedFilter> outFilters = new ArrayList<NamedFilter>();
+    public static JiraNamedFilter[] convertNamedFilters(Iterable<Filter> favouriteFilters) {
+        List<JiraNamedFilter> outFilters = new ArrayList<>();
 
-        for (FavouriteFilter filter : favouriteFilters) {
+        for (Filter filter : favouriteFilters) {
             outFilters.add(convert(filter));
         }
 
-        return outFilters.toArray(new NamedFilter[outFilters.size()]);
+        return outFilters.toArray(new JiraNamedFilter[outFilters.size()]);
     }
 
-    private static NamedFilter convert(FavouriteFilter filter) {
-        NamedFilter outFilter = new NamedFilter();
+    private static JiraNamedFilter convert(Filter filter) {
+        JiraNamedFilter outFilter = new JiraNamedFilter();
 
         outFilter.setId(filter.getId().toString());
         outFilter.setName(filter.getName());
@@ -984,7 +959,7 @@ public class JiraRestConverter {
     }
 
     public static JiraStatus[] convertStatuses(Iterable<Status> statuses) {
-        List<JiraStatus> outStatuses = new ArrayList<JiraStatus>();
+        List<JiraStatus> outStatuses = new ArrayList<>();
 
         for (Status status : statuses) {
             outStatuses.add(convert(status));
@@ -1003,7 +978,7 @@ public class JiraRestConverter {
         return outStatus;
     }
 
-    public static FieldInput convert(CustomField customField) {
+    public static FieldInput convert(JiraCustomField customField) {
 
         JiraFieldType fieldType = JiraFieldType.fromKey(customField.getKey());
 
@@ -1018,14 +993,18 @@ public class JiraRestConverter {
             break;
         case DATE:
 
-            if (customField.getValues().size() > 0 && customField.getValues().get(0) != null
-                    && customField.getValues().get(0).length() > 0) {
+            if (customField.getValues().size() > 0 && customField.getValues().get(0) != null && customField.getValues().get(0).length() > 0) {
                 String date = null;
-
+                final String dateValue = customField.getValues().get(0);
                 try {
-                    date = new DateTime(Long.valueOf(customField.getValues().get(0))).toString(JiraRestFields.DATE_FORMAT);
-                } catch (IllegalArgumentException e) {
-                    date = new DateTime(customField.getValues().get(0)).toString(JiraRestFields.DATE_FORMAT);
+
+                    final long epochTime = Long.parseLong(dateValue);
+                    date = LocalDate.ofInstant(Instant.ofEpochMilli(epochTime), ZoneId.systemDefault())
+                            .format(DateTimeFormatter.ofPattern(JiraRestFields.DATE_FORMAT));
+                } catch (Exception e) {
+                    date = LocalDate.parse(dateValue, DateTimeFormatter.ofPattern(JiraRestFields.DATE_FORMAT).withZone(ZoneId.systemDefault()))
+                            .format(DateTimeFormatter.ofPattern(JiraRestFields.DATE_FORMAT));
+                    // date = new OffsetDateTime(dateValue).toString(JiraRestFields.DATE_FORMAT);
                 }
 
                 return new FieldInput(customField.getId(), date);
@@ -1033,18 +1012,19 @@ public class JiraRestConverter {
             break;
         case DATETIME:
 
-            if (customField.getValues().size() > 0 && customField.getValues().get(0) != null
-                    && customField.getValues().get(0).length() > 0) {
+            if (customField.getValues().size() > 0 && customField.getValues().get(0) != null && customField.getValues().get(0).length() > 0) {
                 String date = null;
-
+                final String dateValue = customField.getValues().get(0);
                 try {
-                    date = new DateTime(customField.getValues().get(0)).toString(JiraRestFields.DATE_TIME_FORMAT);
-                } catch (IllegalArgumentException e) {
-
-                    date = DateTimeFormat.forPattern("EEE, dd MMM yyyy HH:mm:ss") //$NON-NLS-1$
-                            .withLocale(Locale.ENGLISH)
-                            .parseDateTime(customField.getValues().get(0))
-                            .toString(JiraRestFields.DATE_TIME_FORMAT);
+                    final OffsetDateTime localDateTime = LocalDateTime
+                            .parse(dateValue, DateTimeFormatter.ofPattern(JiraRestFields.DATE_TIME_FORMAT).withZone(ZoneId.systemDefault()))
+                            .atOffset(ZoneOffset.UTC);
+                    date = localDateTime.format(DateTimeFormatter.ofPattern(JiraRestFields.DATE_TIME_FORMAT));
+                } catch (Exception e) {
+                    date = LocalDateTime.parse(dateValue, DateTimeFormatter.ofPattern("EEE, dd MMM yyyy HH:mm:ss").localizedBy(Locale.ENGLISH))
+                            .atOffset(ZoneOffset.UTC).format(DateTimeFormatter.ofPattern(JiraRestFields.DATE_TIME_FORMAT));
+                    // date = DateTimeFormatter.ofPattern("EEE, dd MMM yyyy HH:mm:ss") //$NON-NLS-1$
+                    // .withLocale(Locale.ENGLISH).parseOffsetDateTime(dateValue).toString(JiraRestFields.DATE_TIME_FORMAT);
                 }
 
                 return new FieldInput(customField.getId(), date);
@@ -1053,8 +1033,7 @@ public class JiraRestConverter {
             break;
 
         case FLOATFIELD:
-            if (customField.getValues().size() > 0 && customField.getValues().get(0) != null
-                    && customField.getValues().get(0).length() > 0) {
+            if (customField.getValues().size() > 0 && customField.getValues().get(0) != null && customField.getValues().get(0).length() > 0) {
                 return new FieldInput(customField.getId(), Float.parseFloat(customField.getValues().get(0)));
             }
             break;
@@ -1062,7 +1041,7 @@ public class JiraRestConverter {
         case MULTIGROUPPICKER:
             if (customField.getValues().size() > 0 && customField.getValues().get(0) != null) {
 
-                List<ComplexIssueInputFieldValue> fields = new ArrayList<ComplexIssueInputFieldValue>();
+                List<ComplexIssueInputFieldValue> fields = new ArrayList<>();
 
                 List<String> items = Arrays.asList(customField.getValues().get(0).split(",")); //$NON-NLS-1$
 
@@ -1077,14 +1056,13 @@ public class JiraRestConverter {
         case USERPICKER:
         case GROUPPICKER:
             if (customField.getValues().size() > 0 && customField.getValues().get(0) != null) {
-                return new FieldInput(customField.getId(), ComplexIssueInputFieldValue.with(JiraRestFields.NAME,
-                        customField.getValues().get(0)));
+                return new FieldInput(customField.getId(), ComplexIssueInputFieldValue.with(JiraRestFields.NAME, customField.getValues().get(0)));
             }
             break;
         case SELECT:
         case RADIOBUTTONS:
             if (customField.getValues().size() > 0) {
-                if (CustomField.NONE_ALLOWED_VALUE.equals(customField.getValues().get(0))) {
+                if (JiraCustomField.NONE_ALLOWED_VALUE.equals(customField.getValues().get(0))) {
                     return new FieldInput(customField.getId(), ComplexIssueInputFieldValue.with("id", "-1"));
                 }
                 String value = customField.getValues().get(0);
@@ -1094,14 +1072,14 @@ public class JiraRestConverter {
         case MULTISELECT:
         case MULTICHECKBOXES:
 
-//			if (customField.getValues().size() > 0) {
-            List<ComplexIssueInputFieldValue> values = new ArrayList<ComplexIssueInputFieldValue>();
+            // if (customField.getValues().size() > 0) {
+            List<ComplexIssueInputFieldValue> values = new ArrayList<>();
             for (String value : customField.getValues()) {
                 values.add(ComplexIssueInputFieldValue.with("value", value)); //$NON-NLS-1$
             }
 
             return new FieldInput(customField.getId(), values);
-//			}
+            // }
 
         case LABELSS:
             if (customField.getValues().size() > 0) {
