@@ -12,6 +12,7 @@
 package me.glindholm.connector.eclipse.internal.jira.ui.editor;
 
 import java.text.ParseException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
@@ -31,7 +32,7 @@ import org.eclipse.jface.viewers.IOpenListener;
 import org.eclipse.jface.viewers.OpenEvent;
 import org.eclipse.jface.viewers.TableViewer;
 import org.eclipse.jface.viewers.Viewer;
-import org.eclipse.jface.viewers.ViewerSorter;
+import org.eclipse.jface.viewers.ViewerComparator;
 import org.eclipse.jface.window.ToolTip;
 import org.eclipse.mylyn.commons.ui.CommonImages;
 import org.eclipse.mylyn.tasks.core.data.TaskAttribute;
@@ -79,7 +80,7 @@ public class WorkLogPart extends AbstractTaskEditorPart {
     private final String[] columns = { Messages.WorkLogPart_Creator, Messages.WorkLogPart_Date,
             Messages.WorkLogPart_Worked, Messages.WorkLogPart_Description };
 
-    private final int[] columnWidths = { 130, 70, 100, 150 };
+    private final int[] columnWidths = { 200, 250, 100, 300 };
 
     private List<TaskAttribute> logEntries;
 
@@ -121,10 +122,10 @@ public class WorkLogPart extends AbstractTaskEditorPart {
         table.setHeaderVisible(true);
         table.setLayout(new GridLayout());
         GridDataFactory.fillDefaults()
-                .align(SWT.FILL, SWT.FILL)
-                .grab(true, false)
-                .hint(500, SWT.DEFAULT)
-                .applyTo(table);
+        .align(SWT.FILL, SWT.FILL)
+        .grab(true, false)
+        .hint(500, SWT.DEFAULT)
+        .applyTo(table);
 
         for (int i = 0; i < columns.length; i++) {
             TableColumn column = new TableColumn(table, SWT.LEFT, i);
@@ -138,13 +139,13 @@ public class WorkLogPart extends AbstractTaskEditorPart {
         attachmentsViewer.setColumnProperties(columns);
         ColumnViewerToolTipSupport.enableFor(attachmentsViewer, ToolTip.NO_RECREATE);
 
-        attachmentsViewer.setSorter(new ViewerSorter() {
+        attachmentsViewer.setComparator(new ViewerComparator() {
             @Override
             public int compare(Viewer viewer, Object e1, Object e2) {
                 JiraWorkLog item1 = (JiraWorkLog) e1;
                 JiraWorkLog item2 = (JiraWorkLog) e2;
-                Date created1 = item1.getCreated();
-                Date created2 = item2.getCreated();
+                Instant created1 = item1.getCreated();
+                Instant created2 = item2.getCreated();
                 if (created1 != null && created2 != null) {
                     return created1.compareTo(created2);
                 } else if (created1 == null && created2 != null) {
@@ -157,7 +158,7 @@ public class WorkLogPart extends AbstractTaskEditorPart {
             }
         });
 
-        List<JiraWorkLog> workLogList = new ArrayList<JiraWorkLog>(logEntries.size());
+        List<JiraWorkLog> workLogList = new ArrayList<>(logEntries.size());
         for (TaskAttribute attribute : logEntries) {
             JiraWorkLog log = new WorkLogConverter().createFrom(attribute);
             workLogList.add(log);
@@ -165,6 +166,7 @@ public class WorkLogPart extends AbstractTaskEditorPart {
         attachmentsViewer.setContentProvider(new ArrayContentProvider());
         attachmentsViewer.setLabelProvider(new WorkLogTableLabelProvider(getJiraTimeFormat()));
         attachmentsViewer.addOpenListener(new IOpenListener() {
+            @Override
             public void open(OpenEvent event) {
                 TasksUiUtil.openUrl(JiraConnectorUi.getTaskWorkLogUrl(getModel().getTaskRepository(),
                         getModel().getTask()));
@@ -176,6 +178,7 @@ public class WorkLogPart extends AbstractTaskEditorPart {
         menuManager = new MenuManager();
         menuManager.setRemoveAllWhenShown(true);
         menuManager.addMenuListener(new IMenuListener() {
+            @Override
             public void menuAboutToShow(IMenuManager manager) {
                 // TODO provide popup menu
             }
@@ -270,7 +273,7 @@ public class WorkLogPart extends AbstractTaskEditorPart {
             newWorkDoneAmount = log.getTimeSpent();
             newWorkDoneDate = new GregorianCalendar();
             if (log.getStartDate() != null) {
-                newWorkDoneDate.setTime(log.getStartDate());
+                newWorkDoneDate.setTime(Date.from(log.getStartDate()));
             }
             newWorkDoneDescription = log.getComment();
             newWorkDoneAdjustEstimate = log.getAdjustEstimate();
@@ -314,8 +317,9 @@ public class WorkLogPart extends AbstractTaskEditorPart {
         final String timeSpendTooltip = getTimeSpentTooltipText();
 
         toolkit.createLabel(newWorkLogComposite, Messages.WorkLogPart_Time_Spent);
-        timeSpentText = toolkit.createText(newWorkLogComposite, getJiraTimeFormat().format(new Long(newWorkDoneAmount)));
+        timeSpentText = toolkit.createText(newWorkLogComposite, getJiraTimeFormat().format(Long.valueOf(newWorkDoneAmount)));
         timeSpentText.addModifyListener(new ModifyListener() {
+            @Override
             public void modifyText(ModifyEvent e) {
                 setTimeSpendDecorator();
                 timeSpentText.setToolTipText(timeSpendTooltip);
@@ -325,10 +329,10 @@ public class WorkLogPart extends AbstractTaskEditorPart {
 
         timeSpentText.setToolTipText(timeSpendTooltip);
         GridDataFactory.fillDefaults()
-                .span(2, 1)
-                .hint(135, SWT.DEFAULT)
-                .align(SWT.BEGINNING, SWT.FILL)
-                .applyTo(timeSpentText);
+        .span(2, 1)
+        .hint(135, SWT.DEFAULT)
+        .align(SWT.BEGINNING, SWT.FILL)
+        .applyTo(timeSpentText);
 
         toolkit.createLabel(newWorkLogComposite, Messages.WorkLogPart_Start_Date);
         dateWidget = new DateTime(newWorkLogComposite, SWT.DATE);
@@ -394,6 +398,7 @@ public class WorkLogPart extends AbstractTaskEditorPart {
         final Text descriptionText = toolkit.createText(newWorkLogComposite, newWorkDoneDescription, SWT.WRAP
                 | SWT.MULTI | SWT.V_SCROLL);
         descriptionText.addModifyListener(new ModifyListener() {
+            @Override
             public void modifyText(ModifyEvent e) {
                 newWorkDoneDescription = descriptionText.getText();
                 addWorkLogToModel();
@@ -434,7 +439,7 @@ public class WorkLogPart extends AbstractTaskEditorPart {
         JiraWorkLog tempworkLog = new JiraWorkLog();
         tempworkLog.setAuthor(getTaskEditorPage().getTaskRepository().getUserName());
         tempworkLog.setComment(newWorkDoneDescription);
-        tempworkLog.setStartDate(newWorkDoneDate.getTime());
+        tempworkLog.setStartDate(newWorkDoneDate.getTime().toInstant());
         tempworkLog.setTimeSpent(newWorkDoneAmount);
         tempworkLog.setAdjustEstimate(newWorkDoneAdjustEstimate);
         if (tempworkLog.equals(newWorkLog)) {
